--- a/views/index.pug
+++ b/views/index.pug
@@ -2,6 +2,30 @@ extends layout
 
 block content
   h1= title
-  p Welcome to #{title}
+  p Welcome to Venkata RayuduAdapa #{title}
 
-  button(type="button", class="btn btn-danger") Press  me
+  button(type="button", class="btn btn-danger" onClick="doBump()") Press  me
+
+  br
+
+  div(id="bump") Bump the count
+
+  script.
+
+
+
+    var count=0;
+
+    var bump=1;
+
+    function doBump() {
+
+      count=count+bump;
+
+      bump=bump+1;
+
+      document.getElementById("bump").innerHTML=`Count ${count} with bump ${bump}.`;
+
+    }
+
+
