--- a/views/food.pug
+++ b/views/food.pug
@@ -10,3 +10,22 @@ block content
       div(class="col-sm-2") Food type:#{item.foodtype}, Food quality:#{item.foodquality}, Food Cost:#{item.foodcost}
 
   br
+  h5= 'price of purchase'
+
+
+
+  div(class="container-fluid")
+
+    each food,index in results
+
+      div(class="row", onclick=`buy(${index})`)
+
+        div(class="col-sm-2") <br>food #{index}: #{food.foodtype} quality:#{food.foodquality} Cost:#{food.foodCost}
+
+  script.
+
+        function buy(price){
+
+          alert('You purchased item ' + price)
+
+        } 
