--- a/views/index.pug
+++ b/views/index.pug
@@ -27,5 +27,7 @@ block content
       document.getElementById("bump").innerHTML=`Count ${count} with bump ${bump}.`;
 
     }
+  br
+  a(href="http://localhost:3000/food") Food 
 
 
